<resources>
    <string name="app_name">NoteTakingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="create_account_btn">Create Account</string>
    <string name="enter_username_email">Enter Username/Email</string>
    <string name="create_account">Create\nAccount</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="log_out">LOG OUT</string>
    <string name="johnson_micheal">JOHNSON MICHEAL</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="lets_get_started">Continue</string>
    <string name="make_a_call">Make A Call</string>
    <string name="sit_back">Sit Back and Enjoy</string>
    <string name="find_location">Find Your Location</string>
    <string name="first_desc">Too fresh bro</string>
    <string name="second_desc">Yeah Boy, we good to go</string>
    <string name="you_can_search_any_place_or_with_in_the_specified_city_we_will_display_specific_or_all_related_shops_to_match_your_search">You can search any place or with-in the specified city.We will display specific or all related shops to match your search.</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note</string>
    <string name="warning">Warning</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_password">Confirm Password</string>
</resources>