<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/warning"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:paddingTop="20dp"
            android:src="@drawable/ic_warning_black_24dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/warning"
            android:fontFamily="@font/baloo"
            android:paddingTop="20dp"
            android:text="@string/warning"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry"
            android:layout_toRightOf="@id/warning" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/muli"
        android:paddingStart="30dp"
        android:paddingLeft="20dp"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/dialog_no"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_toStartOf="@id/dialog_yes"
            android:background="@color/color4"
            android:text="@string/no"
            android:textColor="@android:color/black"
            android:layout_toLeftOf="@id/dialog_yes" />

        <Button
            android:id="@+id/dialog_yes"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color4"
            android:text="@string/yes"
            android:textColor="@android:color/black"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>