<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ProfileFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/color4"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/man2"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/profile_img"
                android:fontFamily="@font/bungee"
                android:includeFontPadding="false"
                android:text="@string/johnson_micheal"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/short_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/full_name"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/profile_img"
                android:includeFontPadding="false"
                android:text="@string/johnson_micheal"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-110dp"
            android:gravity="center_horizontal"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="150dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/color4">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/booking_label2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="12"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/payment_description2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/booking_label2"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="Total Notes"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="150dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/color4">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/something"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="12"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/something"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="Total Notes"
                        android:textSize="14sp" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:drawablePadding="10dp"
                    app:boxStrokeColor="@color/color4"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/color4"
                    app:hintTextColor="@android:color/black"
                    app:startIconDrawable="@drawable/man"
                    app:startIconTint="@color/color4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:textCursorDrawable="@null">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:drawablePadding="10dp"
                    app:boxStrokeColor="@color/color4"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/color4"
                    app:hintEnabled="true"
                    app:hintTextColor="@android:color/black"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/color4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@null">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/color4"
                    android:fontFamily="@font/bungee"
                    android:id="@+id/update"
                    android:text="@string/update">

                </Button>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</ScrollView>